fixed installs bug

--- a/newsletter/templates/newsletter/base_modules/installs.html
+++ b/newsletter/templates/newsletter/base_modules/installs.html
@@ -529,7 +529,7 @@
 												<!--[if (gte mso 9)|(IE)]></td></tr></table><![endif]-->
 											</td>
 										</tr>
-										{% for post in data11 %}
+										{% for post in installs1 %}
 										<tr>
 												<td
 													class="pc-fb-font"
