--- a/newsletter/templates/newsletter/base.html
+++ b/newsletter/templates/newsletter/base.html
@@ -68,6 +68,9 @@
 					</div>
 				</li>
 				<li class="nav-item">
+					<a class="nav-link" href="{% url 'download' %}">Download</a>
+				</li>
+				<li class="nav-item">
 					<a class="nav-link" href="{% url 'logout' %}">Logout</a>
 				</li>
 				{% else %}
